# CodeQuest

./: .gitignore  AUTHORS  CMakeLists.txt  CodeQuery.leo  CodeQuest.leo  INSTALL  Makefile.am  README  SConstruct  aclocal.m4  config.h.in  configure.ac
doc/: build-docs-from-manpage.sh  codequest.1  codequest.ps
documentation/: CMakeLists.txt
examples/: 1d-dense-line-Bacon-Shor-code  1d-dense-line-Kitaev  1d-dense-line-Shor-code  1d-dense-line-stabilizer-code  1d-dense-line-subsystem-code  1d-sparse-line  2d-sparse-hexagon  2d-sparse-square-2x2-XYZ  2d-sparse-square-2x2-compass  2d-sparse-square-3x3-compass  2d-sparse-square-4x4-compass  xx-sparse-line
examples/generate/: 4square-interactions.py  compass-interactions-3body-only-XXX-ZZZ-alternating.py  compass-interactions-3body-only-XXX-ZZZ.py  compass-interactions-with-3body-XXX-ZZZ.py  compass-interactions-with-3body-YYY.py  compass-interactions-with-anticommuting-next-nearest-neighbor.py  compass-interactions-with-commuting-next-nearest-neighbor.py  compass-interactions-with-diagonals.py  compass-interactions.py  fix-permissions.sh  random-compass-interactions.py  read_grid_parameters.py  set-executable-permissions.sh  triangular-lattice-3body-anticommuting-interactions.py  triangular-lattice-compass-interactions-with-commuting-next-nearest-neighbor.py  triangular-lattice-compass-interactions-with-one-flaw.py  triangular-lattice-compass-interactions.py
examples/generate/rectangular/: 4square-interactions.py  compass-interactions-with-anticommuting-next-nearest-neighbor.py  compass-interactions-with-commuting-next-nearest-neighbor.py
examples/generate/triangular/: compass-interactions-with-one-flaw.py
includes/: CMakeLists.txt  codequest.hpp
logo-lattices/: CodeLogo.leo  logo.py  tilings_library.logo
logo-lattices/tilings/: hexagon-Kitaev.logo  octogons-XYZ-with-filled-exteriors.logo  octogons-XYZ-with-filled-interiors.logo  octogons-XYZ.logo  octogons-common.logo  pentagons-XYZ.logo  reduced-trihexagonal-compass.logo  rhombitrihexagonal-compass.logo  squares-compass-alternating-between-lines.logo  squares-compass-alternating-within-lines.logo  squares-compass-extra-long-lines.logo  squares-compass-squareworld.logo  squares-compass-triangleworld.logo  squares-compass-worm.logo  squares-random.logo  triangles-XYZ.logo  trihexagonal-compass.logo
logo-lattices/tilings_interpreter/: arguments.py  quantum_turtle.py  tilings_library.logo
sources/: CMakeLists.txt  codequest-dense-1d.cc  codequest-sparse.cc  codequest.cc  codequest.hpp
sources/program/: CMakeLists.txt  codequest-dense-1d.cpp  codequest-sparse.cpp  codequest.cpp
src/: Makefile.am  codelib.cc  codelib.hpp  codequery-dense-1d.cc  codequery-sparse.cc  codequery.cc  codequest-dense-1d.cc  codequest-sparse.cc  codequest.cc  codequest.hpp
testing/: randomized-tests.cc
tests/: CMakeLists.txt  randomized-tests.cc  randomized-tests.hpp  test-minimizer-dynamic.cpp  test-minimizer-static.cpp  test-minimizer.cpp  test-solver-dynamic.cpp  test-solver-static.cpp  test-solver.cpp  test.cpp  testlib-minimizer-dynamic.cpp  testlib-minimizer-static-4.cpp  testlib-minimizer-static-64.cpp  testlib-minimizer-static-8.cpp  testlib-minimizer-static.cpp  testlib-minimizer.cpp  testlib-solver-adaptive.cpp  testlib-solver-dynamic.cpp  testlib-solver-static-16.cpp  testlib-solver-static-32.cpp  testlib-solver-static-4.cpp  testlib-solver-static-64.cpp  testlib-solver-static-8.cpp  testlib-solver-static.cpp  testlib-solver.cpp  testlib.cpp  testlib.hpp
tests/includes/: randomized-tests.hpp  testlib.hpp
